-7,5,6,7 in the first 256 indcies can be recovered

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,5 +25,5 @@ target_link_libraries(cpaTest1024 cpakem1024)
 
 # Attack prgoramms
 add_executable(cpaAttack cpaAttack.c)
-target_link_libraries(cpaAttack cpakem1024)
+target_link_libraries(cpaAttack cpakem1024 m)
 target_link_libraries(cpaAttack ${CMAKE_THREAD_LIBS_INIT})
